--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "vrcx",
   "version": "0.0.0",
-  "author": "pypy <git@pypy.moe>",
   "description": "manage your friendship of VRChat",
+  "author": "pypy <git@pypy.moe>",
   "main": "./assets/main.js",
   "scripts": {
     "start": "electron . --enable-logging",
+    "rebuild": "electron-rebuild -w better-sqlite3 -p",
     "dev": "npm run development",
     "development": "mix",
     "hot": "mix watch --hot",
@@ -13,8 +14,8 @@
     "production": "mix --production",
     "watch": "mix watch",
     "watch-poll": "mix watch -- --watch-options-poll=1000",
-    "dist": "electron-builder",
-    "pack": "electron-builder --dir"
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "repository": {
     "type": "git",
@@ -30,11 +31,13 @@
   "homepage": "https://github.com/pypy-vrc/VRCX#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "better-sqlite3": "^7.1.2",
     "vue": "^2.6.12"
   },
   "devDependencies": {
     "electron": "^11.2.3",
     "electron-builder": "^22.9.1",
+    "electron-rebuild": "^2.3.5",
     "html-webpack-plugin": "^5.1.0",
     "laravel-mix": "^6.0.11",
     "pug-loader": "^2.4.0",
@@ -50,6 +53,7 @@
     "copyright": "Copyright © 2021 pypy",
     "files": [
       "assets/*",
+      "build/*",
       "node_modules/*",
       "package.json"
     ],
