--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "html-webpack-plugin": "^5.1.0",
     "laravel-mix": "^6.0.11",
     "pug-loader": "^2.4.0",
+    "pug-plain-loader": "^1.1.0",
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.32.7",
     "sass-loader": "^8.0.2",
