--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "assets/main.js",
   "scripts": {
     "start": "electron . --enable-logging",
-    "rebuild": "electron-rebuild -w better-sqlite3 -p",
+    "rebuild": "electron-rebuild -w better-sqlite3",
     "dev": "npm run development",
     "development": "mix",
     "hot": "mix watch --hot",
