--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "better-sqlite3": "^7.1.2",
-    "vrcx-native": "github:pypy-vrc/vrcx-native",
+    "vrcx-native": "github:pypy-vrc/vrcx-native#v0.0.1",
     "vue": "^2.6.12"
   },
   "devDependencies": {
