separate mix config

--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   "scripts": {
     "start": "electron . --enable-logging",
     "rebuild": "electron-rebuild -w vrcx-native,better-sqlite3",
-    "dev": "npm run development",
-    "development": "mix",
-    "hot": "mix watch --hot",
-    "prod": "npm run production",
-    "production": "mix --production",
-    "watch": "mix watch",
-    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "dev-main": "mix --mix-config=webpack.mix.main.js",
+    "prod-main": "mix --production --mix-config=webpack.mix.main.js",
+    "watch-main": "mix watch --mix-config=webpack.mix.main.js",
+    "dev-preload": "mix --mix-config=webpack.mix.preload.js",
+    "prod-preload": "mix --production --mix-config=webpack.mix.preload.js",
+    "watch-preload": "mix watch --mix-config=webpack.mix.preload.js",
+    "dev-renderer": "mix --mix-config=webpack.mix.renderer.js",
+    "prod-renderer": "mix --production --mix-config=webpack.mix.renderer.js",
+    "watch-renderer": "mix watch --mix-config=webpack.mix.renderer.js",
     "pack": "electron-builder --dir",
     "dist": "electron-builder"
   },
