--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "better-sqlite3": "^7.1.2",
-    "vrcx-native": "github:pypy-vrc/vrcx-native",
-    "vue": "^2.6.12"
+    "vrcx-native": "github:pypy-vrc/vrcx-native"
   },
   "devDependencies": {
     "electron": "^11.3.0",
