--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "main": "assets/main.js",
   "scripts": {
     "start": "electron . --enable-logging",
-    "rebuild": "electron-rebuild -w vrcx-native,better-sqlite3",
-    "dev-main": "mix --mix-config=webpack.mix.main.js",
-    "prod-main": "mix --production --mix-config=webpack.mix.main.js",
-    "watch-main": "mix watch --mix-config=webpack.mix.main.js",
-    "dev-preload": "mix --mix-config=webpack.mix.preload.js",
-    "prod-preload": "mix --production --mix-config=webpack.mix.preload.js",
-    "watch-preload": "mix watch --mix-config=webpack.mix.preload.js",
-    "dev-renderer": "mix --mix-config=webpack.mix.renderer.js",
-    "prod-renderer": "mix --production --mix-config=webpack.mix.renderer.js",
-    "watch-renderer": "mix watch --mix-config=webpack.mix.renderer.js",
+    "rebuild": "electron-rebuild -f -w vrcx-native,better-sqlite3",
+    "rebuild:vrcx-native": "electron-rebuild -f -w vrcx-native",
+    "dev:main": "mix --mix-config=webpack.mix.main.js",
+    "prod:main": "mix --production --mix-config=webpack.mix.main.js",
+    "watch:main": "mix watch --mix-config=webpack.mix.main.js",
+    "dev:preload": "mix --mix-config=webpack.mix.preload.js",
+    "prod:preload": "mix --production --mix-config=webpack.mix.preload.js",
+    "watch:preload": "mix watch --mix-config=webpack.mix.preload.js",
+    "dev:renderer": "mix --mix-config=webpack.mix.renderer.js",
+    "prod:renderer": "mix --production --mix-config=webpack.mix.renderer.js",
+    "watch:renderer": "mix watch --mix-config=webpack.mix.renderer.js",
     "postinstall": "electron-builder install-app-deps",
     "pack": "electron-builder --dir",
     "dist": "electron-builder"
