--- a/vrcx-native/package.json
+++ b/vrcx-native/package.json
@@ -6,8 +6,11 @@
     "install": "prebuild-install || node-gyp rebuild"
   },
   "dependencies": {
-    "bindings": "^1.5.0",
+    "bindings": "^1.5.0"
+  },
+  "devDependencies": {
     "node-addon-api": "*",
+    "node-gyp": "^7.1.2",
     "prebuild-install": "^6.0.0"
   }
 }
