--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "better-sqlite3": "^7.1.2",
+    "element-plus": "^1.0.2-beta.32",
     "vrcx-native": "file:vrcx-native",
     "vue": "^3.0.6"
   },
