--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "better-sqlite3": "^7.1.2",
     "element-plus": "^1.0.2-beta.32",
     "vrcx-native": "file:vrcx-native",
-    "vue": "^3.0.6"
+    "vue": "^3.0.6",
+    "vue-i18n": "^9.0.0"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.6",
